# How_to_write_CMake

./: README.md
cmake_practice_01_single_source_code/: CMakeLists.txt  mainapp.cpp
cmake_practice_02_separated_build/: CMakeLists.txt
cmake_practice_02_separated_build/include/: greetings_chinese.h  greetings_vietnamese.h
cmake_practice_02_separated_build/source/: greetings_vietnamese.cpp  mainapp.cpp
cmake_practice_03_project_to_lib_a/: CMakeLists.txt
cmake_practice_03_project_to_lib_so/: CMakeLists.txt
cmake_practice_03_project_to_lib_so/include/: greetings_english.h
cmake_practice_03_project_to_lib_so/source/: greetings_chinese.cpp  greetings_english.cpp
cmake_practice_04_include_a_lib_to_project/: CMakeLists.txt
cmake_practice_04_include_a_lib_to_project/include/: greetings_spanish.h
cmake_practice_04_include_a_lib_to_project/source/: mainapp.cpp
cmake_practice_04_include_so_lib_to_project/: CMakeLists.txt
cmake_practice_04_include_so_lib_to_project/source/: greetings_spanish.cpp  mainapp.cpp
cmake_practice_05_modern_cmake_simple/: CMakeLists.txt  main.cpp  my_library.cpp  my_library.hpp
